--- a/contracts/package.json
+++ b/contracts/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/contracts": "^5.3.0",
     "hardhat": "^2.24.0"
   }
 }
