--- a/contract/package.json
+++ b/contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contracts",
+  "name": "contract",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,9 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@openzeppelin/contracts": "^5.3.0",
     "hardhat": "^2.24.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.3.0"
   }
 }
